force-app/main/default/objects/Interview_Response__c/Interview_Response__c.object-meta.xml
<CustomObject>
    <label>Interview Response</label>
    <pluralLabel>Interview Responses</pluralLabel>
    <nameField>
        <displayFormat>RESP-{00000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>