force-app/main/default/objects/Interview_Response__c/fields/Improvement_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Suggestions__c</fullName>
    <label>Improvement Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>