force-app/main/default/objects/Interview_Response__c/fields/Interview_Prep_Session__c.field-meta.xml
<CustomField>
    <fullName>Interview_Prep_Session__c</fullName>
    <label>Interview Prep Session</label>
    <referenceTo>Interview_Prep_Session__c</referenceTo>
    <relationshipLabel>Interview Responses</relationshipLabel>
    <relationshipName>Interview_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>