force-app/main/default/objects/Interview_Response__c/fields/Key_Points_Covered__c.field-meta.xml
<CustomField>
    <fullName>Key_Points_Covered__c</fullName>
    <label>Key Points Covered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>