force-app/main/default/objects/Interview_Response__c/fields/Missing_Elements__c.field-meta.xml
<CustomField>
    <fullName>Missing_Elements__c</fullName>
    <label>Missing Elements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>