force-app/main/default/objects/Interview_Response__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>