force-app/main/default/objects/Interview_Response__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Situational</fullName>
            </value>
            <value>
                <fullName>Culture Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>