force-app/main/default/objects/Interview_Response__c/fields/STAR_Method_Used__c.field-meta.xml
<CustomField>
    <fullName>STAR_Method_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STAR Method Used</label>
    <type>Checkbox</type>
</CustomField>