force-app/main/default/objects/Interview_Response__c/fields/User_Response__c.field-meta.xml
<CustomField>
    <fullName>User_Response__c</fullName>
    <label>User Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>